@@ -335,7 +335,7 @@ public class ResourceFacadeImpl implements ResourceFacade {
             this.scriptGroovyExpressionCache.put(expression, groovyClass)
         }
         // NOTE: consider keeping the binding somewhere, like in the ExecutionContext to avoid creating repeatedly
-        Script script = InvokerHelper.createScript(groovyClass, new Binding(ecfi.executionContext.context))
+        Script script = InvokerHelper.createScript(groovyClass, new ContextBinding(ecfi.executionContext.context))
         return script
     }
 
