@@ -19,6 +19,7 @@ import org.moqui.context.ExecutionContextFactory
 import org.moqui.context.ScriptRunner
 import org.moqui.impl.context.ExecutionContextFactoryImpl
 import org.moqui.impl.StupidUtilities
+import org.moqui.impl.context.ContextBinding
 
 class GroovyScriptRunner implements ScriptRunner {
     protected final static org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(GroovyScriptRunner.class)
@@ -35,7 +36,7 @@ class GroovyScriptRunner implements ScriptRunner {
     }
 
     Object run(String location, String method, ExecutionContext ec) {
-        Script script = InvokerHelper.createScript(getGroovyByLocation(location), new Binding(ec.context))
+        Script script = InvokerHelper.createScript(getGroovyByLocation(location), new ContextBinding(ec.context))
         Object result
         if (method) {
             result = script.invokeMethod(method, {})
