@@ -113,19 +113,6 @@ public class ContextStack implements Map<Object, Object> {
 
     /** @see java.util.Map#containsKey(java.lang.Object) */
     public boolean containsKey(Object key) {
-        /* NOTE: this would be the proper way to do it, but to avoid problems with fields not defined in Groovy, etc
-         *     we'll always pretend like it is defined and null. May consider not doing this at some point and find
-         *     a better solution.
-        for (Map curMap: stackList) {
-            if (key == null && curMap instanceof Hashtable) continue;
-            if (curMap.containsKey(key)) return true;
-        }
-        return false;
-        */
-        return true;
-    }
-
-    public boolean reallyContainsKey(Object key) {
         for (Map curMap: stackList) {
             if (key == null && curMap instanceof Hashtable) continue;
             if (curMap.containsKey(key)) return true;
